Working with jump fixes

--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -3,12 +3,19 @@
     padding: 0;
 }
 
-.game-character{
+.game-character, .game-entity,.game-line{
     width: 2rem;
     height: 2rem;
     background-size: 49rem;
-    background-repeat: no-repeat;
     position: absolute;
     bottom: 0;
     left: 0;
+}
+.game-line{
+    width: auto;
+    display: flex;
+}
+.game-entity{
+    background-size: 80rem;
+    position: inherit;
 }
