--- a/public/css/mario.css
+++ b/public/css/mario.css
@@ -1,6 +1,7 @@
 
 .mario{
     background-image: url('./../media/mario_bros_/smb_mario_sheet.png');
+    background-repeat: no-repeat;
 }
 .standing-left{
     background-position: 46% 0%;
@@ -13,4 +14,16 @@
 }
 .jumping-right{
     background-position: 92.4% 0%;
+}
+.running-start-left{
+    background-position: 38.4% 0%;
+}
+.running-end-left{
+    background-position: 22.9% 0%;
+}
+.running-start-right{
+    background-position: 61.7% 0%;
+}
+.running-end-right{
+    background-position: 77% 0%;
 }
